# morgi

./: .gitignore  LICENSE  README.md  morgi.cabal
app/: Main.hs
demo/: site.yaml
demo/albums/: albums.yaml
demo/albums/test1/: test1.yaml
demo/albums/test2/: test2.yaml
demo/layout/: album.html.mustache  albums.html.mustache  header.html.mustache  index.html.mustache  post.html.mustache  posts.html.mustache
demo/posts/: post-abc.md  post-def.md  posts.yaml
src/: Lib.hs
