name:                morgi
version:             0.1.0.0
synopsis:            Static site generator
description:         Mustache based static site generator with series or album support
homepage:            https://github.com/levischuck/morgi#readme
license:             BSD3
license-file:        LICENSE
author:              Levi Schuck
maintainer:          me@levischuck.com
copyright:           2016 Levi Schuck
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                    ,  mustache >= 2.1 && < 3
                    ,  yaml >= 0.8 && < 0.9
                    ,  aeson >= 0.10
                    ,  directory >= 1.2
                    ,  text >= 1.2
                    ,  pandoc >= 1.16
                    ,  bytestring >= 0.9 && < 0.11
                    ,  Glob >= 0.7
                    ,  unordered-containers >= 0.5

  default-language:    Haskell2010

executable morgi-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , morgi
  default-language:    Haskell2010

test-suite morgi-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , morgi
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/levischuck/morgi
